[gd_scene load_steps=2 format=3 uid="uid://cddyatt8h5xl3"]

[ext_resource type="Script" path="res://main.gd" id="1_vvvpg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vvvpg")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 3
anchors_preset = 0
offset_right = 600.0
offset_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "URL"

[node name="UrlLineEdit" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Akjava/qwen2-05b"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputLineEdit" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hello"

[node name="AddButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="ResultTextEdit" type="TextEdit" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "test1"

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer3/Button1" to="." method="_on_button_1_pressed"]
